Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3559

MGS formatted with Lustre 2.1 cannot be started with Lustre 2.4

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.1, Lustre 2.5.0
    • Lustre 2.4.0, Lustre 2.5.0
    • None
    • 3
    • 8964

      With Lustre 2.1, I format an MGS with the follwing command:

      mkfs.lustre --reformat --quiet --fsname=migrate --mgs
      --mkfsoptions="-m 0" --device-size=204800 /root/mgt

      Before starting this MGS, tunefs.lustre gives:

      # tunefs.lustre --print /root/mgt
      checking for existing Lustre data: found CONFIGS/mountdata
      Reading CONFIGS/mountdata
      
         Read previous values:
      Target:     MGS
      Index:      unassigned
      Lustre FS:  migrate
      Mount type: ldiskfs
      Flags:      0x74
                    (MGS needs_index first_time update )
      Persistent mount opts: user_xattr,errors=remount-ro
      Parameters:
      
      
         Permanent disk data:
      Target:     MGS
      Index:      unassigned
      Lustre FS:  migrate
      Mount type: ldiskfs
      Flags:      0x74
                    (MGS needs_index first_time update )
      Persistent mount opts: user_xattr,errors=remount-ro
      Parameters:
      

      Still with Lustre 2.1, I successfully start this MGS, and afterwards tunefs.lustre gives:

      # tunefs.lustre --print /root/mgt
      checking for existing Lustre data: found CONFIGS/mountdata
      Reading CONFIGS/mountdata
      
         Read previous values:
      Target:     MGS
      Index:      unassigned
      Lustre FS:  migrate
      Mount type: ldiskfs
      Flags:      0x74
                    (MGS needs_index first_time update )
      Persistent mount opts: user_xattr,errors=remount-ro
      Parameters:
      
      
         Permanent disk data:
      Target:     MGS
      Index:      unassigned
      Lustre FS:  migrate
      Mount type: ldiskfs
      Flags:      0x74
                    (MGS needs_index first_time update )
      Persistent mount opts: user_xattr,errors=remount-ro
      Parameters:
      

      Then I update to Lustre 2.4 on my node, and when I try to start this MGS I get:

      # mount -t lustre -o loop /root/mgt /mnt/migrate/mgt
      mount.lustre.orig: /dev/loop0 has no index assigned (probably formatted with old mkfs)
      

      In Lustre 2.4, it seems mount.lustre requires every target, including MGT, to have an index. But with Lustre 2.1, MGTs can be formatted without specifying an index, and this is the way all our customers did. So if these customers migrate to Lustre 2.4, they will not be able to start their MGS.

      I will propose a patch for mount.lustre in Lustre 2.4 to address this issue.

      Sebastien.

            bfaccini Bruno Faccini (Inactive)
            sebastien.buisson Sebastien Buisson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: