lustre/utils/mount_lustre.c
@@ -388,7 +388,8 @@ static int parse_ldd(char *source, struct mount_opts *mop, char *options)
 		return rc;
 	}
 
-	if (ldd->ldd_flags & LDD_F_NEED_INDEX) {
+	if ((IS_MDT(ldd) || IS_OST(ldd)) &&
+	    (ldd->ldd_flags & LDD_F_NEED_INDEX)) {
 		fprintf(stderr, "%s: %s has no index assigned "
 			"(probably formatted with old mkfs)\n",
 			progname, source);
